--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-
 server.port=8080
+spring.datasource.url=jdbc:h2:mem:dbtest;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.jpa.hibernate.ddl-auto = create
+spring.h2.console.enabled=true
+spring.jpa.show-sql = true
